WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
206201
Propogate UIEdgeInsets from WKWebView to WKSafeBrowsingWarning on iOS
https://bugs.webkit.org/show_bug.cgi?id=206201
Summary
Propogate UIEdgeInsets from WKWebView to WKSafeBrowsingWarning on iOS
Alex Christensen
Reported
2020-01-13 15:27:41 PST
Propogate UIEdgeInsets from WKWebView to WKSafeBrowsingWarning on iOS
Attachments
Patch
(2.22 KB, patch)
2020-01-13 15:29 PST
,
Alex Christensen
thorton
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alex Christensen
Comment 1
2020-01-13 15:29:58 PST
Created
attachment 387578
[details]
Patch
Alex Christensen
Comment 2
2020-01-13 15:30:01 PST
<
rdar://problem/57135847
>
Alex Christensen
Comment 3
2020-01-13 15:37:27 PST
https://trac.webkit.org/changeset/254462/webkit
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug