Propogate UIEdgeInsets from WKWebView to WKSafeBrowsingWarning on iOS https://bugs.webkit.org/show_bug.cgi?id=206201 <rdar://problem/57135847>

Reviewed by Tim Horton.

Manually verified this fixes the radar.

* UIProcess/API/ios/WKWebViewIOS.mm:
(-[WKWebView _computedObscuredInsetForSafeBrowsingWarning]):
(-[WKWebView safeAreaInsetsDidChange]):
(-[WKWebView _setObscuredInsets:]):



Canonical link: https://commits.webkit.org/219284@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@254462 268f45cc-cd09-0410-ab3c-d52691b4dbfc